[gd_scene load_steps=2 format=3 uid="uid://cgax0tyixs3og"]

[ext_resource type="Script" path="res://Scripts/Pause_menu.gd" id="1_dw6a4"]

[node name="Pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dw6a4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -100.0
offset_right = 76.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Setting"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Return to menu"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="Confirmation" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -78.5
offset_right = 255.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="Label" type="Label" parent="Confirmation"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -37.5
offset_right = 245.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
text = "The game cannot be saved. The progression will be lost forever.

Quit the game?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Confirmation"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -40.0
offset_right = 35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="Yes" type="Button" parent="Confirmation/HBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="No" type="Button" parent="Confirmation/HBoxContainer"]
layout_mode = 2
text = "No"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Confirmation/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Confirmation/HBoxContainer/No" to="." method="_on_no_pressed"]
